docs/v0.1.1/_sources/gallery/neural_losses.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/neural_losses.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_neural_losses.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_neural_losses.py:

DeepPeak neural losses and configurable training.

.. GENERATED FROM PYTHON SOURCE LINES 4-15

.. code-block:: Python

    import numpy as np
    import tensorflow as tf

    from DeepPeak.models import (
        ShapeAwarePulseLoss,
        SmoothBinaryCrossentropy,
        TrainingConfig,
        WeightedBinaryCrossentropy,
        WeightedHuber,
    )








.. GENERATED FROM PYTHON SOURCE LINES 16-18

The reconstruction losses accept targets and predictions with either
``(batch, length)`` or ``(batch, length, 1)`` shapes.

.. GENERATED FROM PYTHON SOURCE LINES 18-35

.. code-block:: Python

    y_true = tf.constant(np.random.default_rng(42).random((4, 128, 1)), dtype=tf.float32)
    y_pred = tf.constant(np.random.default_rng(43).random((4, 128, 1)), dtype=tf.float32)

    losses = {
        "weighted huber": WeightedHuber(delta=0.25, alpha=2.0),
        "shape aware pulse": ShapeAwarePulseLoss(
            amplitude_weight=1.0,
            shape_weight=0.25,
            smoothness_weight=0.05,
        ),
        "weighted BCE": WeightedBinaryCrossentropy(alpha=2.0),
        "smooth BCE": SmoothBinaryCrossentropy(alpha=2.0, smoothness_weight=0.02),
    }

    values = {name: float(loss(y_true, y_pred).numpy()) for name, loss in losses.items()}
    print(values)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    {'weighted huber': 0.11057770252227783, 'shape aware pulse': 0.1806727796792984, 'weighted BCE': 1.9978559017181396, 'smooth BCE': 2.0043559074401855}




.. GENERATED FROM PYTHON SOURCE LINES 36-41

Pass the same configuration to DenseNet, WaveNet, or UNet1D:

    model.fit(signals, clean_signals, config=TrainingConfig(
        epochs=50, validation_split=0.2, patience=6,
    ))

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: Python

    config = TrainingConfig(epochs=20, validation_split=0.2, patience=5)
    print(config)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    TrainingConfig(epochs=20, batch_size=32, validation_split=0.2, patience=5, monitor='val_loss', use_early_stopping=True, restore_best_weights=True, reduce_lr_on_plateau=True, learning_rate_factor=0.5, min_learning_rate=1e-06, min_delta=0.0, monitor_mode='auto', seed=None, checkpoint_path=None, save_best_only=True, save_weights_only=True, verbose=1, shuffle=True)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.017 seconds)


.. _sphx_glr_download_gallery_neural_losses.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: neural_losses.ipynb <neural_losses.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: neural_losses.py <neural_losses.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: neural_losses.zip <neural_losses.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
